# shamir-cli

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
agents/: init.py  recover.py  simulate.py  verify.py
docs/: AGENTS_CONTRACT.md  CHANGELOG.md  CLI_CONTRACT.md  CRYPTO_SPEC.md  FORMAT.md  LTS_POLICY.md  NON_GOALS.md  PR_JUSTIFICATION.md  SECURITY_MODEL.md  SECURITY_RESPONSE.md  TAG_v0.1.0.md  VERSIONING_POLICY.md
shamir/: __init__.py  aead.py  core.py  format_v2.py  gf256.py  sss_gf256.py
shamir/cli/: __init__.py  errors.py  main.py  recover.py  split.py
shamir/core/: __init__.py  exceptions.py  gf256.py  polynomial.py  shamir.py
shamir/crypto/: __init__.py  aead.py  kdf.py
shamir/format/: __init__.py  errors.py  exceptions.py  v2.py
shamir/util/: __init__.py  base64.py  validation.py
tests/: __init__.py  test_aead.py  test_core.py  test_gf256.py  test_repo.py  test_simulate.py  test_sss_gf256.py  test_verify.py
tests/cli/: test_cli_failures.py  test_recover_cli.py  test_split_cli.py
tests/core/: test_gf256.py  test_polynomial.py  test_shamir.py
tests/format/: test_format_v2_consistency.py  test_format_v2_invalid.py  test_format_v2_valid.py
tests/integration/: test_cli_e2e.py
tests/vectors/aead/: auth_fail.json  encrypt_decrypt.json
tests/vectors/gf256/: add.json  inv.json  mul.json
tests/vectors/sss/: split_recover..son  tamper_fail.json
utils/: audit.py  forensic.py  repo.py
