[metadata]
name = shamir-cli
version = 0.2.1
description = Auditable Shamir Secret Sharing CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrzej Dobrucki
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    shamir = shamir.cli:main

[options.packages.find]
exclude =
    tests
    docs

[tool:pytest]
testpaths = tests
addopts = -ra

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
python_version = 3.9
strict = True
ignore_missing_imports = True
